--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "faker": "^4.1.0",
     "jsonwebtoken": "^7.4.1",
     "morgan": "^1.8.1",
+    "npmlog": "^4.1.0",
     "pg": "^6.2.2",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
