--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
-  - 6.10.2
+  - 6.10.3
 before_script:
     - npm install
 script:
     - npm test
+services:
+  - postgresql
