--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Oluwagbenga Joloko",
   "license": "ISC",
   "dependencies": {
+    "node-pre-gyp": "^0.6.36",
     "babel-cli": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
