[feature 146442567] added bycrypt js

--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "author": "Oluwagbenga Joloko",
   "license": "ISC",
   "dependencies": {
-    "node-pre-gyp": "^0.6.36",
     "babel-cli": "^6.24.1",
     "bcrypt": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "faker": "^4.1.0",
     "jsonwebtoken": "^7.4.1",
     "morgan": "^1.8.1",
+    "node-pre-gyp": "^0.6.36",
     "npmlog": "^4.1.0",
     "pg": "^6.2.2",
     "pg-hstore": "^2.3.2",
