--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
+sudo: required
+dist: trusty
 language: node_js
 node_js:
-  - 6
+ - 6
+services:
+ - postgresql
+postgres:
+ adapter: postgresql
+ database: myapp_test
+ username: postgres
 before_script:
+  - psql -c 'create database travis;' -U postgres
+  - dropdb --if-exists travis && createdb travis
   - npm install
+  - sequelize db:migrate
 script:
   - npm test
-services:
-  - postgresql
