--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "npmlog": "^4.1.0",
     "pg": "^6.2.2",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.30.4"
+    "sequelize": "^3.30.4",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
