--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Oluwagbenga Joloko",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "bcryptjs": "^2.4.3",
@@ -19,20 +20,26 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "faker": "^4.1.0",
+    "history": "^4.6.1",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
+    "keymirror": "^0.1.1",
     "morgan": "^1.8.1",
     "npmlog": "^4.1.0",
     "pg": "^6.2.2",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.4",
+    "superagent": "^3.5.2",
     "toastr": "2.1.2"
   },
   "devDependencies": {
@@ -41,6 +48,7 @@
     "babel-core": "6.24.1",
     "babel-loader": "7.0.0",
     "babel-plugin-react-display-name": "2.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
@@ -56,6 +64,7 @@
     "enzyme": "2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
@@ -72,7 +81,7 @@
     "nyc": "^11.0.2",
     "open": "0.0.5",
     "react-addons-test-utils": "15.5.1",
-    "redux-immutable-state-invariant": "2.0.0",
+    "redux-immutable-state-invariant": "^2.0.0",
     "redux-mock-store": "1.2.3",
     "rimraf": "2.6.1",
     "sequelize-cli": "^2.7.0",
