--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "babel-node server.js ",
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls > lcov.info",
-    "test": "NODE_ENV=test nyc ./node_modules/mocha/bin/_mocha --compilers js:babel-register server/tests/**/*.spec.js --timeout=600000"
+    "test": "NODE_ENV=test nyc ./node_modules/mocha/bin/_mocha --compilers js:babel-register server/tests/**/*.spec.js --timeout=60000"
   },
   "author": "Oluwagbenga Joloko",
   "license": "ISC",
@@ -24,6 +24,8 @@
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
     "keymirror": "^0.1.1",
+    "materialize-css": "^0.98.2",
+    "materializecss": "^1.0.11",
     "morgan": "^1.8.1",
     "npmlog": "^4.1.0",
     "pg": "^6.2.2",
@@ -35,12 +37,13 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
+    "react-tinymce": "^0.5.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.4",
     "superagent": "^3.5.2",
-    "toastr": "2.1.2"
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -76,6 +79,7 @@
     "jsdom": "11.0.0",
     "mocha": "^3.4.2",
     "nock": "9.0.13",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "4.0.2",
     "nyc": "^11.0.2",
@@ -84,6 +88,7 @@
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-mock-store": "1.2.3",
     "rimraf": "2.6.1",
+    "sass-loader": "^6.0.5",
     "sequelize-cli": "^2.7.0",
     "style-loader": "0.18.1",
     "url-loader": "0.5.8",
