--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.4",
     "superagent": "^3.5.2",
+    "sweetalert": "^1.1.3",
     "toastr": "^2.1.2"
   },
   "devDependencies": {
