--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "query-string": "^4.3.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-paginate": "^4.4.2",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
@@ -43,6 +44,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.4",
+    "strip": "^3.0.0",
+    "striptags": "^3.0.1",
     "superagent": "^3.5.2",
     "sweetalert": "^1.1.3",
     "toastr": "^2.1.2"
