--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-cli": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^2.1.2",
     "faker": "^4.1.0",
     "history": "^4.6.1",
     "jquery": "^3.2.1",
@@ -57,7 +57,6 @@
     "toastr": "^2.1.2"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
     "babel-core": "6.24.1",
     "babel-loader": "7.0.0",
