--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "description": "a document management system",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node server.js ",
+    "start": "./node_modules/.bin/babel-node serverProd.js",
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls > lcov.info",
     "test": "NODE_ENV=test nyc ./node_modules/mocha/bin/_mocha --compilers js:babel-register server/tests/**/*.spec.js --timeout=60000",
     "clean-dist": "npm run remove-dist && mkdir -p client/dist",
     "remove-dist": "node_modules/.bin/rimraf client/dist",
-    "build:html": "babel-node tools/buildHtml.js",
+    "build:html": "./node_modules/.bin/babel-node tools/buildHtml.js",
     "prebuild": "npm-run-all clean-dist build:html",
-    "build": "babel-node tools/build.js",
-    "postbuild": "babel-node serverProd.js"
+    "build": "./node_modules/.bin/babel-node tools/build.js",
+    "postbuild": "./node_modules/.bin/babel-node serverProd.js"
   },
   "author": "Oluwagbenga Joloko",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-cli": "6.8.0",
+    "babel-core": "6.8.0",
+    "babel-loader": "6.2.4",
+    "babel-plugin-react-display-name": "2.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-register": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
@@ -54,19 +64,10 @@
     "striptags": "^3.0.1",
     "superagent": "^3.5.2",
     "sweetalert": "^1.1.3",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "colors": "1.1.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "6.24.1",
-    "babel-loader": "7.0.0",
-    "babel-plugin-react-display-name": "2.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-register": "^6.24.1",
     "chai": "^4.0.0",
     "chai-http": "^3.0.0",
     "cheerio": "1.0.0-rc.1",
