[feature 147326077] fixed api docs

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "migrate": "sequelize db:migrate",
-    "migrate:undo":  "sequelize db:migrate:undo:all",
+    "migrate:undo": "sequelize db:migrate:undo:all",
     "seed": "sequelize db:seed --seed roles.js && sequelize db:seed --seed users.js && sequelize db:seed --seed documents.js  ",
-    "start": "nodemon --exec babel-node serverProd.js ",
+    "start": "babel-node serverProd.js ",
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls > lcov.info",
-    "test:server": "NODE_ENV=test nyc ./node_modules/mocha/bin/_mocha --compilers js:babel-register server/tests/**/*.spec.js --timeout=60000",
+    "test:server": "NODE_ENV=test nyc --reporter=html --reporter=text ./node_modules/mocha/bin/_mocha --compilers js:babel-register server/tests/**/*.spec.js --timeout=60000",
+    "test:client": "nyc --reporter=text  ./node_modules/mocha/bin/_mocha client/tests/testSetup.js client/tests/**/*.spec.js",
     "clean-dist": "npm run remove-dist && mkdir -p client/dist",
     "remove-dist": "node_modules/.bin/rimraf client/dist",
     "build:html": "./node_modules/.bin/babel-node tools/buildHtml.js",
@@ -90,7 +91,7 @@
     "eventsource-polyfill": "0.9.6",
     "expect": "1.20.2",
     "file-loader": "0.11.1",
-    "jsdom": "11.0.0",
+    "jsdom": "^9.12.0",
     "mocha": "^3.4.2",
     "nock": "9.0.13",
     "node-sass": "^4.5.3",
