--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,9 @@
     }
   },
   "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "import/extensions": 0,
+    "import/no-named-as-default": 0,
     "max-len":["error",{ "code": 80 }],
     "one-var": 0,
     "one-var-declaration-per-line": 0,
