--- a/package.json
+++ b/package.json
@@ -5,18 +5,28 @@
   "main": "index.js",
   "scripts": {
     "migrate": "sequelize db:migrate",
+    "e2e": "node_modules/.bin/nightwatch --config nightwatch.conf.js",
     "migrate:undo": "sequelize db:migrate:undo:all",
     "seed": "sequelize db:seed --seed roles.js && sequelize db:seed --seed users.js && sequelize db:seed --seed documents.js  ",
-    "start": "babel-node serverProd.js ",
-    "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls > lcov.info",
+    "start": "nodemon --exec babel-node serverDev.js",
+    "test": "NODE_ENV=test nyc --reporter=text  --reporter=html --extension .jsx ./node_modules/mocha/bin/_mocha client/tests/testSetup.js client/tests/components/**/*spec.js client/tests/**/*spec.js server/tests/**/*.spec.js --timeout=60000",
     "test:server": "NODE_ENV=test nyc --reporter=html --reporter=text ./node_modules/mocha/bin/_mocha --compilers js:babel-register server/tests/**/*.spec.js --timeout=60000",
-    "test:client": "nyc --reporter=text  ./node_modules/mocha/bin/_mocha client/tests/testSetup.js client/tests/**/*.spec.js",
+    "test:client": "NODE_ENV=test nyc --reporter=text  --reporter=html --extension .jsx ./node_modules/mocha/bin/_mocha client/tests/testSetup.js client/tests/components/**/*spec.js client/tests/**/*spec.js --timeout=60000",
     "clean-dist": "npm run remove-dist && mkdir -p client/dist",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "remove-dist": "node_modules/.bin/rimraf client/dist",
     "build:html": "./node_modules/.bin/babel-node tools/buildHtml.js",
     "prebuild": "npm-run-all clean-dist build:html",
     "build": "./node_modules/.bin/babel-node tools/build.js",
     "postbuild": "./node_modules/.bin/babel-node serverProd.js"
+  },
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false,
+    "exclude": [
+      "server/tests",
+      "client/tests"
+    ]
   },
   "author": "Oluwagbenga Joloko",
   "license": "ISC",
@@ -24,6 +34,7 @@
     "axios": "^0.16.2",
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "6.2.4",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -36,6 +47,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "cheerio": "1.0.0-rc.1",
     "colors": "1.1.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
@@ -43,6 +55,7 @@
     "faker": "^4.1.0",
     "history": "^4.6.1",
     "jquery": "^3.2.1",
+    "jquery-validation": "^1.16.0",
     "jsonwebtoken": "^7.4.1",
     "keymirror": "^0.1.1",
     "materialize-css": "^0.98.2",
@@ -62,6 +75,7 @@
     "react-router-redux": "^4.0.8",
     "react-tinymce": "^0.5.1",
     "redux": "^3.6.0",
+    "redux-immutable-state-invariant": "^2.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.4",
@@ -70,17 +84,20 @@
     "superagent": "^3.5.2",
     "swagger-jsdoc": "^1.3.0",
     "sweetalert": "^1.1.3",
-    "toastr": "^2.1.2"
+    "tinymce": "^4.6.4",
+    "toastr": "^2.1.2",
+    "webpack": "^2.6.1"
   },
   "devDependencies": {
+    "babel-plugin-istanbul": "^4.1.4",
     "chai": "^4.0.0",
+    "chai-enzyme": "^0.7.1",
     "chai-http": "^3.0.0",
-    "cheerio": "1.0.0-rc.1",
-    "colors": "1.1.2",
+    "codeclimate-test-reporter": "^0.5.0",
     "compression": "1.6.2",
     "cross-env": "5.0.0",
     "css-loader": "0.28.4",
-    "enzyme": "2.8.2",
+    "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-airbnb-base": "^11.2.0",
@@ -93,6 +110,8 @@
     "file-loader": "0.11.1",
     "jsdom": "^9.12.0",
     "mocha": "^3.4.2",
+    "moxios": "^0.4.0",
+    "nightwatch": "^0.9.16",
     "nock": "9.0.13",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
@@ -100,14 +119,14 @@
     "nyc": "^11.0.2",
     "open": "0.0.5",
     "react-addons-test-utils": "15.5.1",
-    "redux-immutable-state-invariant": "^2.0.0",
     "redux-mock-store": "1.2.3",
     "rimraf": "2.6.1",
     "sass-loader": "^6.0.5",
+    "selenium-download": "^2.0.10",
     "sequelize-cli": "^2.7.0",
+    "sinon": "^2.3.4",
     "style-loader": "0.18.1",
     "url-loader": "0.5.8",
-    "webpack": "^2.6.1",
     "webpack-dev-middleware": "1.10.2",
     "webpack-hot-middleware": "2.18.0"
   },
