[ft-148127035] updated start script

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "migrate": "sequelize db:migrate",
     "e2e": "node_modules/.bin/nightwatch --config nightwatch.conf.js",
     "migrate:undo": "sequelize db:migrate:undo:all",
+    "start":"babel-node serverProd.js",
     "seed": "sequelize db:seed --seed roles.js && sequelize db:seed --seed users.js && sequelize db:seed --seed documents.js  ",
-    "start": "nodemon --exec babel-node serverDev.js",
+    "start:dev": "nodemon --exec babel-node serverDev.js",
     "test": "NODE_ENV=test nyc --reporter=text  --reporter=html --extension .jsx ./node_modules/mocha/bin/_mocha client/tests/testSetup.js client/tests/components/**/*spec.js client/tests/**/*spec.js server/tests/**/*.spec.js --timeout=60000",
     "test:server": "NODE_ENV=test nyc --reporter=html --reporter=text ./node_modules/mocha/bin/_mocha --compilers js:babel-register server/tests/**/*.spec.js --timeout=60000",
     "test:client": "NODE_ENV=test nyc --reporter=text  --reporter=html --extension .jsx ./node_modules/mocha/bin/_mocha client/tests/testSetup.js client/tests/components/**/*spec.js client/tests/**/*spec.js --timeout=60000",
