--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "remove-dist": "node_modules/.bin/rimraf client/dist",
     "build:html": "./node_modules/.bin/babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist build:html",
+    "prebuild": "npm-run-all build:html",
     "build": "./node_modules/.bin/babel-node tools/build.js",
     "postbuild": "./node_modules/.bin/babel-node serverProd.js"
   },
