--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean-dist": "npm run remove-dist && mkdir -p client/dist",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "remove-dist": "node_modules/.bin/rimraf client/dist",
+    "test:models":"NODE_ENV=test nyc --reporter=html --reporter=text ./node_modules/mocha/bin/_mocha --compilers js:babel-register server/tests/models/*.spec.js --timeout=60000",
     "build:html": "./node_modules/.bin/babel-node tools/buildHtml.js",
     "prebuild": "npm-run-all build:html",
     "build": "./node_modules/.bin/babel-node tools/build.js",
