--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "sweetalert": "^1.1.3",
     "tinymce": "^4.6.4",
     "toastr": "^2.1.2",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "selenium-download": "^2.0.10"
   },
   "devDependencies": {
     "babel-plugin-istanbul": "^4.1.4",
@@ -124,7 +125,6 @@
     "redux-mock-store": "1.2.3",
     "rimraf": "2.6.1",
     "sass-loader": "^6.0.5",
-    "selenium-download": "^2.0.10",
     "sequelize-cli": "^2.7.0",
     "sinon": "^2.3.4",
     "style-loader": "0.18.1",
