--- a/.eslintrc
+++ b/.eslintrc
@@ -7,29 +7,14 @@
     "mocha": true,
     "browser": true
   },
-  "plugins": [
-    "react"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "import/extensions": 0,
-    "import/no-named-as-default": 0,
-    "max-len":["error",{ "code": 80 }],
-    "one-var": 0,
+    "one-var": [2, "never"], 
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error",
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
     "curly": ["error", "multi-line"],
-    "import/no-unresolved": [2, { "commonjs": true }],    
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
     "valid-jsdoc": ["error", {
       "requireReturn": true,
@@ -37,6 +22,7 @@
       "requireParamDescription": false,
       "requireReturnDescription": true
     }],
+    "import/no-named-as-default": 0,
     "require-jsdoc": ["error", {
         "require": {
             "FunctionDeclaration": true,
