--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "browser": true
   },
   "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "one-var": [2, "never"], 
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
